[gd_scene load_steps=9 format=3 uid="uid://cdbjcglc6i2aa"]

[ext_resource type="Script" uid="uid://fq5j22p71b47" path="res://Scripts/level_1.gd" id="1_lsmp6"]
[ext_resource type="PackedScene" uid="uid://c6auiqtun8bw6" path="res://Scenes/LevelComponent/board.tscn" id="1_xfk5q"]
[ext_resource type="PackedScene" uid="uid://vqlsbxvk2qsp" path="res://Scenes/LevelComponent/enemy_manager.tscn" id="2_7p6j4"]
[ext_resource type="PackedScene" uid="uid://4evbkis3hktg" path="res://Scenes/LevelComponent/difficulties_manager.tscn" id="3_6444e"]
[ext_resource type="PackedScene" uid="uid://3rhtukotl254" path="res://Scenes/LevelComponent/state_machine.tscn" id="5_evi0p"]
[ext_resource type="Script" uid="uid://n5qacnufbfgj" path="res://Scripts/LevelComponent/test_button.gd" id="6_lsmp6"]
[ext_resource type="PackedScene" uid="uid://cm7i6as4cpu42" path="res://Scenes/LevelComponent/take_management.tscn" id="8_xrdnt"]
[ext_resource type="PackedScene" uid="uid://bq6sdiemeny03" path="res://Scenes/player.tscn" id="9_wrinw"]

[node name="Level1" type="Node2D"]
scale = Vector2(5, 5)
script = ExtResource("1_lsmp6")

[node name="StateMachine" parent="." instance=ExtResource("5_evi0p")]

[node name="Player" parent="." node_paths=PackedStringArray("board", "enemy_manager") instance=ExtResource("9_wrinw")]
scale = Vector2(0.2, 0.2)
board = NodePath("../Board")
enemy_manager = NodePath("../EnemyManager")

[node name="EnemyManager" parent="." node_paths=PackedStringArray("board", "take_management", "player") instance=ExtResource("2_7p6j4")]
board = NodePath("../Board")
take_management = NodePath("../TakeManagement")
player = NodePath("../Player")

[node name="Board" parent="." node_paths=PackedStringArray("enemy_manager") instance=ExtResource("1_xfk5q")]
enemy_manager = NodePath("../EnemyManager")

[node name="DifficultiesManager" parent="." node_paths=PackedStringArray("enemy_manager") instance=ExtResource("3_6444e")]
enemy_manager = NodePath("../EnemyManager")

[node name="TakeManagement" parent="." node_paths=PackedStringArray("enemy_manager", "player") instance=ExtResource("8_xrdnt")]
enemy_manager = NodePath("../EnemyManager")
player = NodePath("../Player")

[node name="Button" type="Button" parent="." node_paths=PackedStringArray("state")]
offset_right = 40.0
offset_bottom = 28.0
script = ExtResource("6_lsmp6")
state = NodePath("../StateMachine")

[connection signal="Turn_Changed" from="Button" to="." method="_on_button_turn_changed"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
